...
      valueIn: 'Отримано',
      valueOut: 'Віддано',
    },
  },
  accounts: {
    addAccount: 'Додати рахунок',
    emptyState: 'Ще немає рахунків',
    icon: 'Іконка {{name}}',
    title: 'Рахунки',
  },
  accountDetail: {
    addHolding: 'Додати актив',
    addressLabel: 'Адреса',
...
